--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,14 @@
 site_name: QuadControl
-site_url: https://quadcontrol.github.io/
-repo_url: https://github.com/quadcontrol/quadcontrol.github.io
-edit_uri: ""
-use_directory_urls: false
+# site_url: https://quadcontrol.github.io/
+# repo_url: https://github.com/quadcontrol/quadcontrol.github.io
+# edit_uri: ""
+# use_directory_urls: false
 
-# IMPORTANTE:
-# Adicione isso para garantir root correto
-extra:
-  social:
-    - icon: fontawesome/brands/github
-      link: https://github.com/quadcontrol
+# extra:
+#   social:
+#     - icon: fontawesome/brands/github
+#       link: https://github.com/quadcontrol
 
-# Tema (se estiver usando)
 theme:
   name: material
   palette:
@@ -41,3 +38,21 @@ nav:
     - Horizontal Position:
       - Estimator: control_horizontal_estimator.md
       - Controller: control_horizontal_controller.md
+
+markdown_extensions:
+  - pymdownx.tasklist
+  - attr_list
+  - def_list
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.tabbed
+  - pymdownx.arithmatex:
+      generic: true
+  - admonition
+  - pymdownx.details
+  - footnotes
+
+extra_javascript:
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - javascripts/mathjax.js
