--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
     - content.code.title         # Título nos blocos de código
     - navigation.indexes         # Usa index.md como página da seção
     - navigation.instant         # Navegação instantânea
+    - content.icon   
   open_in_new_tab: true
 
 extra_css:
@@ -56,7 +57,7 @@ nav:
       - Atuadores: sensors_and_actuators/motors.md
       - Sensores: sensors_and_actuators/sensors.md
 
-  - Conceitos básicos:
+  - Fundamentos:
       - basic_concepts/index.md
       - Aerodinâmica: basic_concepts/aerodynamics.md
       - Mixer: basic_concepts/mixer.md
@@ -79,11 +80,14 @@ nav:
       - Arquitetura: control/architecture/architecture.md
       - Mixer: control/mixer/mixer.md
       - Atitude:
-          - Estimador de atitude: control/attitude/estimator/attitude_estimator.md
-          - Controlador de atitude: control/attitude/controller/attitude_controller.md
+          - control/attitude/index.md
+          - Estimador: control/attitude/estimator/attitude_estimator.md
+          - Controlador: control/attitude/controller/attitude_controller.md
       - Vertical:
-          - Estimador vertical: control/vertical/estimator/vertical_estimator.md
-          - Controlador vertical: control/vertical/controller/vertical_controller.md
+          - control/vertical/index.md
+          - Estimador: control/vertical/estimator/vertical_estimator.md
+          - Controlador: control/vertical/controller/vertical_controller.md
       - Horizontal:
-          - Estimador horizontal: control/horizontal/estimator/horizontal_estimator.md
-          - Controlador horizontal: control/horizontal/controller/horizontal_controller.md
+          - control/horizontal/index.md
+          - Estimador: control/horizontal/estimator/horizontal_estimator.md
+          - Controlador: control/horizontal/controller/horizontal_controller.md
